bugfix DOi being deleted

--- a/ckanext/datacite_publication/templates/scheming/form_snippets/datacite_publication_doi_text.html
+++ b/ckanext/datacite_publication/templates/scheming/form_snippets/datacite_publication_doi_text.html
@@ -15,7 +15,7 @@
 
 <div class="form-group control-medium"  hidden="true">
   <div class="controls ">
-	<input id="field-doi" type="text" name="doi" value="" placeholder="eg. 10.12345/678" class="form-control"  hidden="true">
+	<input id="field-doi" type="text" name="doi" value="{{ data[field.field_name] }}" placeholder="eg. 10.12345/678" class="form-control"  hidden="true">
   </div>
 </div>
 {% endif %}
