--- a/ckanext/datacite_publication/templates/scheming/form_snippets/datacite_publication_select.html
+++ b/ckanext/datacite_publication/templates/scheming/form_snippets/datacite_publication_select.html
@@ -24,7 +24,7 @@
 
   <label class="control-label" for="field-publication_state">Publication State</label>
   {% set pub_state_text = options[0].get('text', data.get(field.field_name, 'None')) %}
-  <p>{{ pub_state_text if  len(pub_state_text)>1 else 'None' }}</p>
+  <p>{{ pub_state_text if pub_state_text|length > 1 else 'None' }}</p>
 
   <div class="controls" hidden="true">
   <select id="field-publication_state" name="publication_state" class="form-control" hidden="true">
