added message onmouseover for publish button

--- a/ckanext/datacite_publication/templates/package/read_base.html
+++ b/ckanext/datacite_publication/templates/package/read_base.html
@@ -30,7 +30,7 @@
 		{% endif %}
 		</a>      
       {% else %}
-      <a class="btn btn-default" href="{{ h.url_for('publish_package', package_id=pkg.name)}}" >
+      <a class="btn btn-default" href="{{ h.url_for('publish_package', package_id=pkg.name)}}" title="Click here to make the dataset public and request a DOI" onmouseover="" >
       	<i class="fa fa-icon fa-cloud-upload"></i>
       	{{ _('Publish') }}
       </a>
