--- a/ckanext/datacite_publication/templates/package/read_base.html
+++ b/ckanext/datacite_publication/templates/package/read_base.html
@@ -46,8 +46,13 @@
 					<span class="caret"></span>
 					</a>  
 					<ul class="dropdown-menu">
+					{% if pkg.publication_state == 'approved' %}
+						<li><a href=""><i class="fa fa-cloud-upload"></i> Publish to Datacite </a></li>
+						<li><a href=""><i class="fa fa-user-plus"></i> Manually Published </a></li>
+				    {% else %}
 						<li><a href="{{ h.url_for('approve_publication_package', package_id=pkg.name)}}"><i class="fa fa-check"></i> Approve </a></li>
 						<li class="disabled"><a href="" target="_blank" disabled><i class="fa fa-times-circle"></i> Deny </a></li>
+				    {% endif %}
 					</ul>
 				</div>   
 	  		{% endif %}   
