--- a/ckanext/datacite_publication/templates/package/read_base.html
+++ b/ckanext/datacite_publication/templates/package/read_base.html
@@ -8,10 +8,21 @@
   {% if h.datacite_publication_is_admin() and h.check_access('package_update', {'id':pkg.id }) %}
       {# ADMIN #} 
             {% if not pkg.publication_state or pkg.publication_state == 'none' %}
-					  <a class="btn btn-default" href="{{ h.url_for('publish_package', package_id=pkg.name)}}" title="Click here to make the dataset public and request a DOI" onmouseover="" >
+					<!--  <a class="btn btn-default" href="{{ h.url_for('publish_package', package_id=pkg.name)}}" title="Click here to make the dataset public and request a DOI" onmouseover="" >
 						<i class="fa fa-icon fa-cloud-upload"></i>
 						{{ _('Publish') }}
-					  </a>
+					  </a> -->
+			<div class="dropdown btn-group">
+				<a class="btn btn-info dropdown-toggle" data-toggle="dropdown"  title="Click here to make the dataset public and request a DOI" href="#" >
+            	<i class="fa fa-icon fa-cloud-upload"></i>
+            	{{ _('Publish') }} <span class="caret"></span>
+				</a>  
+				<ul class="dropdown-menu">
+					<li><a href="{{ h.url_for('publish_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Publish with a new DOI </a></li>
+					<li><a href="{{ h.url_for('make_public_package', package_id=pkg.name)}}"><i class="fa fa-unlock"></i> Publish without DOI </a></li>
+				</ul>
+			</div>   
+
             {% else %}
            		<div class="dropdown btn-group">
  				{% if pkg.publication_state == 'reserved' %}
@@ -50,7 +61,7 @@
 						<li><a href="{{ h.url_for('manual_finish_publication_package', package_id=pkg.name)}}"><i class="fa fa-user-plus"></i> Manually Published </a></li>
 				    {% else %}
 						<li><a href="{{ h.url_for('approve_publication_package', package_id=pkg.name)}}"><i class="fa fa-check"></i> Approve </a></li>
-						<li class="disabled"><a href="" target="_blank" disabled><i class="fa fa-times-circle"></i> Deny </a></li>
+					{#	<li class="disabled"><a href="" target="_blank" disabled><i class="fa fa-times-circle"></i> Deny </a></li> #}
 				    {% endif %}
 					</ul>
 				</div>   
@@ -82,10 +93,22 @@
             {% endif %}
             </a>      
          {% else %}
-          <a class="btn btn-default" href="{{ h.url_for('publish_package', package_id=pkg.name)}}" title="Click here to make the dataset public and request a DOI" onmouseover="" >
+          <!-- <a class="btn btn-default" href="{{ h.url_for('publish_package', package_id=pkg.name)}}" title="Click here to make the dataset public and request a DOI" onmouseover="" >
             <i class="fa fa-icon fa-cloud-upload"></i>
             {{ _('Publish') }}
-          </a>
+          </a> -->
+          
+          <div class="dropdown btn-group">
+				<a class="btn btn-info dropdown-toggle" data-toggle="dropdown"  title="Click here to make the dataset public and request a DOI" href="#" >
+            	<i class="fa fa-icon fa-cloud-upload"></i>
+            	{{ _('Publish') }} <span class="caret"></span>
+				</a>  
+				<ul class="dropdown-menu">
+					<li><a href="{{ h.url_for('publish_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Publish with a new DOI </a></li>
+					<li><a href="{{ h.url_for('make_public_package', package_id=pkg.name)}}"><i class="fa fa-unlock"></i> Publish without DOI </a></li>
+				</ul>
+			</div>               	
+
          {% endif %}
       {% endif %}
   {% endif %}
