--- a/ckanext/datacite_publication/templates/package/read_base.html
+++ b/ckanext/datacite_publication/templates/package/read_base.html
@@ -4,7 +4,11 @@
 {% block content_action %}
   
   {{ super() }}
-  
+  {#{{ h.url_for('approve_publication_package', package_id=pkg.name )}}
+  {{ h.url_for('api.action', ver=3, logic_function='datacite_approve_publication_package', id=pkg.name) }}
+  {{ h.url_for(controller='dataset', action='approve_publication_package', package_id=pkg.name) }}
+#}
+
   {% if h.datacite_publication_is_admin() and h.check_access('package_update', {'id':pkg.id }) %}
       {# ADMIN #} 
             {% if not pkg.publication_state or pkg.publication_state == 'none' %}
@@ -18,8 +22,8 @@
             	{{ _('Publish') }} <span class="caret"></span>
 				</a>  
 				<ul class="dropdown-menu">
-					<li><a href="{{ h.url_for('publish_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Publish with a new DOI </a></li>
-					<li><a href="{{ h.url_for('make_public_package', package_id=pkg.name)}}"><i class="fa fa-unlock"></i> Publish without DOI </a></li>
+					<li><a href="{{ h.url_for('api.action', ver=3, logic_function='publish_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Publish with a new DOI </a></li>
+					<li><a href="{{ h.url_for('api.action', ver=3, logic_function='make_public_package', package_id=pkg.name)}}"><i class="fa fa-unlock"></i> Publish without DOI </a></li>
 				</ul>
 			</div>   
 
@@ -55,13 +59,13 @@
 					</a>  
 					<ul class="dropdown-menu">
 					{% if pkg.publication_state == 'published' %}
-						<li><a href="{{ h.url_for('update_publication_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Update in Datacite </a></li>
+						<li><a href="{{ h.url_for('api.action', ver=3, logic_function='update_publication_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Update in Datacite </a></li>
 					{% elif pkg.publication_state == 'approved' %}
-						<li><a href="{{ h.url_for('finish_publication_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Publish to Datacite </a></li>
-						<li><a href="{{ h.url_for('manual_finish_publication_package', package_id=pkg.name)}}"><i class="fa fa-user-plus"></i> Manually Published </a></li>
+						<li><a href="{{ h.url_for('api.action', ver=3, logic_function='finish_publication_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Publish to Datacite </a></li>
+						<li><a href="{{ h.url_for('api.action', ver=3, logic_function='manual_finish_publication_package', package_id=pkg.name)}}"><i class="fa fa-user-plus"></i> Manually Published </a></li>
 				    {% else %}
-						<li><a href="{{ h.url_for('approve_publication_package', package_id=pkg.name)}}"><i class="fa fa-check"></i> Approve </a></li>
-					{#	<li class="disabled"><a href="" target="_blank" disabled><i class="fa fa-times-circle"></i> Deny </a></li> #}
+						<li><a href="{{  h.url_for('api.action', ver=3, logic_function='datacite_approve_publication_package', id=pkg.name)}}"><i class="fa fa-check"></i> Approve </a></li>
+						{#	<li class="disabled"><a href="" target="_blank" disabled><i class="fa fa-times-circle"></i> Deny </a></li> #}
 				    {% endif %}
 					</ul>
 				</div>   
@@ -104,8 +108,8 @@
             	{{ _('Publish') }} <span class="caret"></span>
 				</a>  
 				<ul class="dropdown-menu">
-					<li><a href="{{ h.url_for('publish_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Publish with a new DOI </a></li>
-					<li><a href="{{ h.url_for('make_public_package', package_id=pkg.name)}}"><i class="fa fa-unlock"></i> Publish without DOI </a></li>
+					<li><a href="{{ h.url_for('api.action', ver=3, logic_function='publish_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Publish with a new DOI </a></li>
+					<li><a href="{{ h.url_for('api.action', ver=3, logic_function='make_public_package', package_id=pkg.name)}}"><i class="fa fa-unlock"></i> Publish without DOI </a></li>
 				</ul>
 			</div>               	
 
