--- a/ckanext/datacite_publication/templates/package/read_base.html
+++ b/ckanext/datacite_publication/templates/package/read_base.html
@@ -4,26 +4,18 @@
 {% block content_action %}
   
   {{ super() }}
-  {#{{ h.url_for('approve_publication_package', package_id=pkg.name )}}
-  {{ h.url_for('api.action', ver=3, logic_function='datacite_approve_publication_package', id=pkg.name) }}
-  {{ h.url_for(controller='dataset', action='approve_publication_package', package_id=pkg.name) }}
-#}
 
   {% if h.datacite_publication_is_admin() and h.check_access('package_update', {'id':pkg.id }) %}
       {# ADMIN #} 
             {% if not pkg.publication_state or pkg.publication_state == 'none' %}
-					<!--  <a class="btn btn-default" href="{{ h.url_for('publish_package', package_id=pkg.name)}}" title="Click here to make the dataset public and request a DOI" onmouseover="" >
-						<i class="fa fa-icon fa-cloud-upload"></i>
-						{{ _('Publish') }}
-					  </a> -->
 			<div class="dropdown btn-group">
 				<a class="btn btn-info dropdown-toggle" data-toggle="dropdown"  title="Click here to make the dataset public and request a DOI" href="#" >
             	<i class="fa fa-icon fa-cloud-upload"></i>
             	{{ _('Publish') }} <span class="caret"></span>
 				</a>  
 				<ul class="dropdown-menu">
-					<li><a href="{{ h.url_for('api.action', ver=3, logic_function='publish_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Publish with a new DOI </a></li>
-					<li><a href="{{ h.url_for('api.action', ver=3, logic_function='make_public_package', package_id=pkg.name)}}"><i class="fa fa-unlock"></i> Publish without DOI </a></li>
+					<li><a href="{{ h.url_for('datacite_publication.publish_package', id=pkg.name) }}"><i class="fa fa-cloud-upload"></i> Publish with a new DOI </a></li>
+					<li><a href="{{ h.url_for('datacite_publication.make_public_package', id=pkg.name) }}"><i class="fa fa-unlock"></i> Publish without DOI </a></li>
 				</ul>
 			</div>   
 
@@ -59,12 +51,12 @@
 					</a>  
 					<ul class="dropdown-menu">
 					{% if pkg.publication_state == 'published' %}
-						<li><a href="{{ h.url_for('api.action', ver=3, logic_function='update_publication_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Update in Datacite </a></li>
+						<li><a href="{{ h.url_for('datacite_publication.update_publication_package', id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Update in Datacite </a></li>
 					{% elif pkg.publication_state == 'approved' %}
-						<li><a href="{{ h.url_for('api.action', ver=3, logic_function='finish_publication_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Publish to Datacite </a></li>
-						<li><a href="{{ h.url_for('api.action', ver=3, logic_function='manual_finish_publication_package', package_id=pkg.name)}}"><i class="fa fa-user-plus"></i> Manually Published </a></li>
+						<li><a href="{{ h.url_for('datacite_publication.finish_publication_package', id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Publish to Datacite </a></li>
+						<li><a href="{{ h.url_for('datacite_publication.manual_finish_publication_package', id=pkg.name)}}"><i class="fa fa-user-plus"></i> Manually Published </a></li>
 				    {% else %}
-						<li><a href="{{  h.url_for('api.action', ver=3, logic_function='datacite_approve_publication_package', id=pkg.name)}}"><i class="fa fa-check"></i> Approve </a></li>
+						<li><a href="{{  h.url_for('datacite_publication.approve_publication_package', id=pkg.name)}}"><i class="fa fa-check"></i> Approve </a></li>
 						{#	<li class="disabled"><a href="" target="_blank" disabled><i class="fa fa-times-circle"></i> Deny </a></li> #}
 				    {% endif %}
 					</ul>
@@ -97,10 +89,6 @@
             {% endif %}
             </a>      
          {% else %}
-          <!-- <a class="btn btn-default" href="{{ h.url_for('publish_package', package_id=pkg.name)}}" title="Click here to make the dataset public and request a DOI" onmouseover="" >
-            <i class="fa fa-icon fa-cloud-upload"></i>
-            {{ _('Publish') }}
-          </a> -->
           
           <div class="dropdown btn-group">
 				<a class="btn btn-info dropdown-toggle" data-toggle="dropdown"  title="Click here to make the dataset public and request a DOI" href="#" >
@@ -108,8 +96,8 @@
             	{{ _('Publish') }} <span class="caret"></span>
 				</a>  
 				<ul class="dropdown-menu">
-					<li><a href="{{ h.url_for('api.action', ver=3, logic_function='publish_package', package_id=pkg.name)}}"><i class="fa fa-cloud-upload"></i> Publish with a new DOI </a></li>
-					<li><a href="{{ h.url_for('api.action', ver=3, logic_function='make_public_package', package_id=pkg.name)}}"><i class="fa fa-unlock"></i> Publish without DOI </a></li>
+					<li><a href="{{ h.url_for('datacite_publication.publish_package', id=pkg.name) }}"><i class="fa fa-cloud-upload"></i> Publish with a new DOI </a></li>
+					<li><a href="{{ h.url_for('datacite_publication.make_public_package', id=pkg.name) }}"><i class="fa fa-unlock"></i> Publish without DOI </a></li>
 				</ul>
 			</div>               	
 
